should have fixed overflow

--- a/css/main.scss
+++ b/css/main.scss
@@ -27,6 +27,7 @@ body {
   width: 100%;
   background-size: cover;
   background-position: center;
+  overflow-x: hidden;
   // position: absolute;
   // top: 0;
   // left: 0;
